Fixed issue with z-index and positioning of SearchPanes button dropdown.
Jira Issue DD-1345

--- a/css/common.scss
+++ b/css/common.scss
@@ -46,6 +46,12 @@ div.dtsp-topRow {
     }
 }
 
+div.dt-button-collection {
+    top: 40px !important;
+    left: 0px !important;
+    z-index: 2002;
+}
+
 div.dataTables_scrollBody {
     background: white !important;
 }
