--- a/css/searchPanes.bootstrap.scss
+++ b/css/searchPanes.bootstrap.scss
@@ -111,6 +111,7 @@ div.dtsp-panesContainer {
 	border-radius: 10px;
 	margin: 5px 0;
     clear: both;
+    z-index: 2002;
 
 	div.dtsp-title {
 		float: left;
